# iori-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  c_cpp_properties.json.example  makefile
core/: CMakeLists.txt
core/include/: core.hpp
core/src/: core.cpp
src/: main.cpp
